# create_ws

./: frames_2025-11-04_16.19.23.gv  frames_2025-11-04_16.21.02.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/create3_coverage/share/create3_coverage/: package.bash  package.zsh
install/create3_examples_msgs/share/create3_examples_msgs/: local_setup.sh  package.sh
install/create3_examples_py/share/create3_examples_py/: package.sh
install/create3_lidar_slam/share/create3_lidar_slam/: local_setup.sh  package.sh
install/create3_republisher/share/create3_republisher/: package.bash  package.zsh
install/create3_teleop/share/create3_teleop/: package.sh
install/create_bringup/share/create_bringup/: package.sh
install/create_description/share/create_description/: package.sh
install/create_msgs/share/create_msgs/: package.sh
install/create_robot/share/create_robot/: local_setup.sh  package.sh
install/generic_motor_driver/include/create_driver/: generic_motor_driver.h  relay_controller.h
install/generic_motor_driver/lib/generic_motor_driver/: generic_motor_driver
install/generic_motor_driver/share/generic_motor_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
test_ws/: CMakeLists.txt  README_generic.md
test_ws/arduino/relay_controller/: relay_controller.ino
test_ws/include/create_driver/: generic_motor_driver.h
test_ws/launch/: complete_robot.launch.py  relay_controller.launch.py
test_ws/rviz/: rectangular_robot.rviz  robot_view.rviz
test_ws/src/: generic_motor_driver.cpp  relay_controller.cpp
(+23 files in other folders)
